# Modlevi

./: .gitignore  CMakeLists.txt  README.md  manifest.json.in
.github/workflows/: build.yml
scripts/: package.ps1
src/: config_generator.cpp  main.cpp
src/mod/: Config.cpp  Config.h  MyMod.cpp  MyMod.h
